--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,18 +1,22 @@
 version: 2
 
+orbs:
+  heroku: circleci/heroku@0.0.10
+
 jobs:
-  build:
-    working_directory: ~/testci
+  heroku_deploy_review_app:
+    executor: heroku/default
     steps:
-      - run:
-          name: Test
-          command: pwd
+      - checkout
+      - heroku/install
+      - heroku/deploy-via-git:
+          app-name: $HEROKU_APP_NAME
 
 workflows:
   version: 2
   validate-and-deploy:
     jobs:
-      - build:
+      - heroku_deploy_review_app:
           filters:
             branches:
               only:
